--- a/web_2025/fefu_lab/template/about.html
+++ b/web_2025/fefu_lab/template/about.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <title>О нас</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: left; padding: 40px; background-color: #29293b; }
-        h1 { font-size: 48px; color: #873ebe; }
+        body { font-family: Arial, sans-serif; text-align: left; padding: 40px; background-color: #53679C; }
+        h1 { font-size: 48px; color: #F8C87C; }
         p { font-size: 18px; }
         a { text-decoration: none; color: #4bd9e3; }
         a:hover { text-decoration: underline; }
+        img {
+            background-color: transparent;
+            max-width: 900px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <h1>Я не смотрю аниме</h1>
+    <img src="https://avatars.mds.yandex.net/i?id=d86d1cac7ac74922748e492a21526dda_l-6475641-images-thumbs&n=13">
 </body>
 </html>
