--- a/web_2025/fefu_lab/template/base.html
+++ b/web_2025/fefu_lab/template/base.html
@@ -12,7 +12,7 @@
         <a href="/feedback/">Обратная связь</a> | 
         <a href="/register/">Регистрация</a> |
         <a href="/login/">Вход</a> |
-        <a href="/student/1/">Пример студента</a> |
+        <a href="/student/1/">Профиль студента</a> |
         <a href="/course/python-basics/">Курс Python</a>
     </div>    
     <h1>{% block heading %}{% endblock %}</h1>
