--- a/web_2025/fefu_lab/template/home.html
+++ b/web_2025/fefu_lab/template/home.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Главная страница</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #2CB0C5;}
-        h1 { font-size: 48px; color: #8824d5; }
-        p { font-size: 18px; }
-        a { text-decoration: none; color: #4bd9e3; }
-        a:hover { text-decoration: underline; }
-        img {
-            background-color: transparent;
-            max-width: 900px;
-            height: auto;
-        }
-    </style>
-</head>
-<body>
-    <h1>Добро пожаловать на главную страницу!</h1>
-    <img src="https://i.pinimg.com/originals/7b/e2/dd/7be2dda57a158a12690741d4b69ace8c.jpg" class = "center">
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Главная страница{% endblock %}
+{% block heading %}Добро пожаловать на главную страницу!{% endblock %}
+
+{% block content %}
+<div style="text-align: center; padding: 10px; background-color: #53679C; font-family: Arial, sans-serif;">
+    <img src="https://i.pinimg.com/originals/54/d6/60/54d6607ae8467fa9d9ca2dde7a1c20e7.jpg" 
+         alt="Главное изображение" style="background-color: transparent; max-width: 740px; height: auto; margin: 0 auto;">
+</div>
+
+{% endblock %}
