--- a/web_2025/fefu_lab/template/login.html
+++ b/web_2025/fefu_lab/template/login.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Обратная связь{% endblock %}
-{% block heading %}Обратная связь{% endblock %}
+{% block title %}Вход в систему{% endblock %}
+{% block heading %}Вход в систему{% endblock %}
 
 {% block content %}
 <div class="form-container">
     <form method="post">
         {% csrf_token %}
-
+        
         {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
@@ -21,8 +21,12 @@
                 {% endif %}
             </div>
         {% endfor %}
-
-        <button type="submit">Отправить</button>
+        
+        <button type="submit">Войти</button>
     </form>
+    
+    <p style="margin-top: 20px;">
+        Нет аккаунта? <a href="/register/">Зарегистрируйтесь</a>
+    </p>
 </div>
 {% endblock %}
