--- a/web_2025/fefu_lab/template/registration.html
+++ b/web_2025/fefu_lab/template/registration.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Обратная связь{% endblock %}
-{% block heading %}Обратная связь{% endblock %}
+{% block title %}Регистрация{% endblock %}
+{% block heading %}Регистрация{% endblock %}
 
 {% block content %}
 <div class="form-container">
     <form method="post">
         {% csrf_token %}
-
+        
         {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
@@ -22,7 +22,11 @@
             </div>
         {% endfor %}
 
-        <button type="submit">Отправить</button>
+        <button type="submit">Зарегистрироваться</button>
     </form>
+
+    <p style="margin-top: 20px;">
+        Уже есть аккаунт? <a href="/login/">Войдите</a>
+    </p>
 </div>
 {% endblock %}
