--- a/web_2025/fefu_lab/template/home.html
+++ b/web_2025/fefu_lab/template/home.html
@@ -24,11 +24,11 @@
 </div>
 
 <div class="quick-links mt-20">
-    <a href="{% url 'student_list' %}" class="quick-link">
+    <a href="/student/1/" class="quick-link">
         <h3>Студенты</h3>
         <p>Посмотреть список студентов</p>
     </a>
-    <a href="{% url 'course_list' %}" class="quick-link">
+    <a href="/course_list/" class="quick-link">
         <h3>Курсы</h3>
         <p>Выбрать курс для обучения</p>
     </a>
@@ -58,7 +58,7 @@
                 </p>
                 <p><strong>Продолжительность:</strong> {{ course.duration }} часов</p>
                 <p><strong>Уровень:</strong> {{ course.get_level_display }}</p>
-                <a href="{% url 'course_detail' course.slug %}" class="btn" style="margin-top: 10px;">Подробнее</a>
+                <a href="/course/{{course.slug}}/" class="btn" style="margin-top: 10px;">Подробнее</a>
             </div>
         {% endfor %}
     </div>
