--- a/web_2025/fefu_lab/template/home.html
+++ b/web_2025/fefu_lab/template/home.html
@@ -58,7 +58,7 @@
                 </p>
                 <p><strong>Продолжительность:</strong> {{ course.duration }} часов</p>
                 <p><strong>Уровень:</strong> {{ course.get_level_display }}</p>
-                <a href="/course/{{course.slug}}/" class="btn" style="margin-top: 10px;">Подробнее</a>
+                <a href="/course/{{course.slug}}/" class="btn" style="margin-top: 10px; color: #da0050">Подробнее</a>
             </div>
         {% endfor %}
     </div>
