--- a/web_2025/fefu_lab/template/home.html
+++ b/web_2025/fefu_lab/template/home.html
@@ -32,6 +32,10 @@
         <h3>Курсы</h3>
         <p>Выбрать курс для обучения</p>
     </a>
+    <a href="/instructors/" class="quick-link">
+        <h3>Преподователи</h3>
+        <p>Посмотреть список преподавателей</p>
+    </a>
     <a href="/feedback/" class="quick-link">
         <h3>Обратная связь</h3>
         <p>Оставьте ваше сообщение</p>
