--- a/web_2025/fefu_lab/template/profile.html
+++ b/web_2025/fefu_lab/template/profile.html
@@ -26,9 +26,9 @@
 
     {% else %}
       <p><strong>Роль:</strong> Студент</p>
-      <p><strong>Имя:</strong> {{ student.user.first_name }}</p>
-      <p><strong>Фамилия:</strong> {{ student.user.last_name }}</p>
-      <p><strong>Email:</strong> {{ student.user.email }}</p>
+      <p><strong>Имя:</strong> {{ user.first_name }}</p>
+      <p><strong>Фамилия:</strong> {{ user.last_name }}</p>
+      <p><strong>Email:</strong> {{ user.email }}</p>
       <p><strong>Дата рождения:</strong> {{ student.birth_date|date:"d.m.Y" }}</p>
       <p><strong>Факультет:</strong> {{ student.faculty }}</p>
       <h3>Курсы, на которые записан:</h3>
