--- a/web_2025/fefu_lab/template/base.html
+++ b/web_2025/fefu_lab/template/base.html
@@ -15,7 +15,7 @@
     {% if user.is_authenticated %}
         {% if user.student_profile.role == 'STUDENT' %}
             <a href="{% url 'student_dashboard' %}">Дашборд</a> |
-        {% else %}
+        {% elif instructor %}
             <a href="{% url 'teacher_dashboard' %}">Дашборд</a> |
         {% endif %}
         <a href="{% url 'profile' %}">Профиль ({{ user.first_name }})</a> |
